--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ QuantStats==0.0.56
 # https://www.geeksforgeeks.org/python-convert-html-pdf/
 pdfkit==1.0.0
 
+# weasyprint
+# https://doc.courtbouillon.org/weasyprint/latest/
+
 jupyter==1.0.0
